GetViewportAwareElements should be empty when all child elements are invisible

GetViewportAwareElements always return a non empty list because we always have
two visible ViewportAwareRoot elements (one for ChromeVR and one for WebVR) in
our hierarchy.

We should exclude ViewportAwareRoot element from the list returned by the
function. It is a no visual element. So it shouldn't trigger code path that is
used to draw viewport aware elements.

Bug: 763738
Change-Id: I29c14b60e3fc16e224c5e540aa438f25e1c871ef